display overflow fix

--- a/style.css
+++ b/style.css
@@ -115,8 +115,8 @@ body {
   margin-bottom: 25px;
   text-align: right;
   font-family: monospace;
-  overflow-x: visible;
-  overflow-y: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
   border-radius: 5px;
   background-color: black;
   white-space: nowrap;
